--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -3,11 +3,26 @@
   left: 0;
   top: 0;
   bottom: 0;
-  width: 200px;
   background-color: #2c2f31;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  width: 100%;
+  overflow: hidden;
+  z-index: 2;
+  padding: 48px 10px 10px 10px;
+  transform: translateX(-100%);
+  transition: transform 0.2s;
+  max-width: 200px;
+
+  &--open {
+    transform: translateX(0);
+  }
+
+  @media screen and (min-width: 980px) {
+    max-width: 200px;
+    transform: translateX(0);
+  }
+
 
   .user-data {
     margin: 20px 0;
