--- a/src/app/track-list/track-list.component.scss
+++ b/src/app/track-list/track-list.component.scss
@@ -25,7 +25,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
-    padding: 8px 20px;
+    padding: 8px;
     border-radius: 10px;
     cursor: pointer;
     gap: 8px;
