--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     padding: 16px 20px;
     border-radius: 10px;
     transition: background-color 0.3s;
@@ -29,28 +29,30 @@
   }
 
   .playlist-img {
-    max-width: 200px;
-    height: 200px;
+    max-width: 125px;
+    height: 125px;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 10px;
+
+    @media screen and (min-width: 980px) {
+      max-width: 200px;
+      height: 200px;
+    }
   }
 
   .playlist-title {
     margin-bottom: 0;
     color: #fff;
     text-decoration: none;
+    text-align: center;
   }
 
   .playlist-list {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
-    gap: 48px;
-
-    @media screen and (min-width: 640px) {
-      grid-template-columns: 1fr 1fr;
-    }
+    gap: 16px;
 
     @media screen and (min-width: 980px) {
       grid-template-columns: 1fr 1fr;
