--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -9,7 +9,7 @@
   width: 100%;
   overflow: hidden;
   z-index: 2;
-  padding: 48px 10px 10px 10px;
+  padding: 48px 8px 8px 8px;
   transform: translateX(-100%);
   transition: transform 0.2s;
   max-width: 200px;
@@ -19,29 +19,29 @@
   }
 
   @media screen and (min-width: 980px) {
+    padding: 0px 8px 8px 8px;
     max-width: 200px;
     transform: translateX(0);
   }
 
 
   .user-data {
-    margin: 20px 0;
     display: flex;
     align-items: center;
   }
 
   .user-img {
-    width: 50px;
-    height: 50px;
+    width: 48px;
+    height: 48px;
     margin-right: 10px;
     object-fit: cover;
     border-radius: 5px;
-    margin-top: 10px;
   }
 
   .nav-links {
     list-style-type: none;
     padding-left: 0;
+    flex: 0;
 
     .link {
       color: #fff;
@@ -92,10 +92,18 @@
 
   .playlist-list {
     margin-top: 24px;
+    min-height: 100px;
+    flex: 1;
     overflow: auto;
   }
 
   .playlist-name {
     margin-bottom: 0;
+  }
+
+  .logo-conatiner {
+    display: flex;
+    gap: 16px;
+    margin: 24px 0 12px;
   }
 }
