--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
-<div class="player" *ngIf="playerState | async as player">
+<div class="player" *ngIf="player">
   <ng-container>
     <mat-slider *ngIf="playerService.playbackState | async as position" class="song-slider" min="1"
       [max]="player.duration" step="10">
@@ -17,18 +17,22 @@
       </div>
     </div>
     <div class="action-buttons">
-      <button class="btn" (click)="playerService.skipPrev()">
+      <button class="btn-outline" (click)="playerService.skipPrev()">
         <mat-icon>skip_previous</mat-icon>
       </button>
-      <button class="btn" (click)="playerService.tooglePlay()">
+      <button class="btn-outline" (click)="playerService.tooglePlay()">
         <mat-icon *ngIf="player.paused">play_circle_outline</mat-icon>
         <mat-icon *ngIf="!player.paused">pause_circle_outline</mat-icon>
       </button>
-      <button class="btn" (click)="playerService.skipNext();">
+      <button class="btn-outline" (click)="playerService.skipNext();">
         <mat-icon>skip_next</mat-icon>
       </button>
     </div>
     <div class="slider-container">
+      <button class="btn-outline">
+        <app-icon *ngIf="isSavedTrack === false" class="icon--large" type="heartOutline"></app-icon>
+        <app-icon *ngIf="isSavedTrack === true" class="icon--large" type="heart"></app-icon>
+      </button>
       <mat-slider class="volume-slider" min="0" max="1" step="0.1">
         <input (dragEnd)="setVolume($event)" value="0.5" matSliderThumb>
       </mat-slider>
