--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -30,8 +30,8 @@
     </div>
     <div class="slider-container">
       <button class="btn-outline">
-        <app-icon *ngIf="isSavedTrack === false" class="icon--large" type="heartOutline"></app-icon>
-        <app-icon *ngIf="isSavedTrack === true" class="icon--large" type="heart"></app-icon>
+        <app-icon *ngIf="isSavedTrack === false" class="icon" type="heartOutline"></app-icon>
+        <app-icon *ngIf="isSavedTrack === true" class="icon" type="heart"></app-icon>
       </button>
       <mat-slider class="volume-slider" min="0" max="1" step="0.1">
         <input (dragEnd)="setVolume($event)" value="0.5" matSliderThumb>
