--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -29,9 +29,12 @@
       </button>
     </div>
     <div class="slider-container">
+      <button class="btn-outline">
+        <app-icon [ngClass]="{'primary': player.shuffle }" (click)="toggleShuffle()" class="icon"
+          type="shuffle"></app-icon>
+      </button>
       <button class="btn-outline" (click)="toggleSavedTrack()">
-        <app-icon *ngIf="isSavedTrack === false" class="icon" type="heartOutline"></app-icon>
-        <app-icon *ngIf="isSavedTrack === true" class="icon" type="heart"></app-icon>
+        <app-icon [ngClass]="{'primary': isSavedTrack === true }" class="icon" type="heart"></app-icon>
       </button>
       <mat-slider class="volume-slider" min="0" max="1" step="0.1">
         <input (dragEnd)="setVolume($event)" value="0.5" matSliderThumb>
