add toogle liked song snackbar

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="search">
 
   <mat-form-field class="search-input-field" appearance="fill">
-    <input type="text" matInput [formControl]="searchFromControl" placeholder="Search...">
+    <input type="text" matInput [formControl]="searchFromControl" placeholder="Search for specific song...">
 
   </mat-form-field>
 
