--- a/src/app/playlist-tracks/playlist-tracks.component.html
+++ b/src/app/playlist-tracks/playlist-tracks.component.html
@@ -7,7 +7,7 @@
 
 <ng-template #skeletonLoading>
   <div class="title">
-    <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="1"
-      [theme]="{ height: '32px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+    <!-- <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="1"
+      [theme]="{ height: '32px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader> -->
   </div>
 </ng-template>
