--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -29,19 +29,19 @@
   <ul class="track-list track-list--skeleton">
     <li class="track" *ngFor="let item of skeletonLoadingArray; let i = index">
       <div class="song-info">
-        <ngx-skeleton-loader animation="progress-dark" count="1"
+        <!-- <ngx-skeleton-loader animation="progress-dark" count="1"
           [theme]="{ height: '90px', width: '90px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
         <div class="album-artist">
           <ngx-skeleton-loader animation="progress-dark" count="1"
             [theme]="{ height: '32px', width: '160px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
           <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="2"
-            [theme]="{ height: '16px', width: '150px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-        </div>
+            [theme]="{ height: '16px', width: '150px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader> -->
+        <!-- </div> -->
       </div>
 
       <span class="time">
-        <ngx-skeleton-loader animation="progress-dark" count="1"
-          [theme]="{ height: '16px', width: '40px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+        <!-- <ngx-skeleton-loader animation="progress-dark" count="1"
+          [theme]="{ height: '16px', width: '40px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader> -->
       </span>
     </li>
   </ul>
