--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import "~@angular/material/prebuilt-themes/purple-green.css";
+@import "@angular/material/prebuilt-themes/purple-green.css";
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap');
 
 $primary: #1ecd5d;
