--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -2,8 +2,10 @@
   <mat-paginator class="paginator" (page)="handlePageEvent($event)" [length]="total" [pageSize]="pageSize"
     [pageIndex]="currentPage()" aria-label="Select page">
   </mat-paginator>
-  <ul class="track-list" *ngIf="!(isLoading | async); else skeletonLoading">
-    <li (click)="play(i)" class="track" *ngFor="let item of tracksList(); let i = index">
+  @if (!(isLoading | async)){
+  <ul class="track-list">
+    @for(item of tracksList(); track item.track.id; let i = $index){
+    <li (click)="play(i)" class="track">
       <div class="song-info">
         <img class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
         <div class="album-artist">
@@ -19,28 +21,30 @@
       <span class="time">{{item.track.duration_ms | duration}}
       </span>
     </li>
+    }
   </ul>
+  }
+  @else {
+  <ng-template #skeletonLoading>
+    <ul class="track-list track-list--skeleton">
+      <li class="track" *ngFor="let item of skeletonLoadingArray; let i = index">
+        <div class="song-info">
+          <!-- <ngx-skeleton-loader animation="progress-dark" count="1"
+              [theme]="{ height: '90px', width: '90px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+            <div class="album-artist">
+              <ngx-skeleton-loader animation="progress-dark" count="1"
+                [theme]="{ height: '32px', width: '160px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+              <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="2"
+                [theme]="{ height: '16px', width: '150px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+            </div> -->
+        </div>
 
+        <span class="time">
+          <!-- <ngx-skeleton-loader animation="progress-dark" count="1"
+              [theme]="{ height: '16px', width: '30px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader> -->
+        </span>
+      </li>
+    </ul>
+  </ng-template>
+  }
 </div>
-
-<ng-template #skeletonLoading>
-  <ul class="track-list track-list--skeleton">
-    <li class="track" *ngFor="let item of skeletonLoadingArray; let i = index">
-      <div class="song-info">
-        <!-- <ngx-skeleton-loader animation="progress-dark" count="1"
-          [theme]="{ height: '90px', width: '90px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-        <div class="album-artist">
-          <ngx-skeleton-loader animation="progress-dark" count="1"
-            [theme]="{ height: '32px', width: '160px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-          <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="2"
-            [theme]="{ height: '16px', width: '150px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-        </div> -->
-      </div>
-
-      <span class="time">
-        <!-- <ngx-skeleton-loader animation="progress-dark" count="1"
-          [theme]="{ height: '16px', width: '30px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader> -->
-      </span>
-    </li>
-  </ul>
-</ng-template>
