--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="home">
   <h1 class="title">Home 😎</h1>
 
-  <div class="playlist-list" *ngIf="featuredPlaylists()?.length else skeletonLoading">
-    <a class="link" [routerLink]="['/playlist', item.id]" class="playlist" *ngFor="let item of featuredPlaylists()">
+  <div class="playlist-list" *ngIf="featuredPlaylists.isSuccess()">
+    <a class="link" [routerLink]="['/playlist', item.id]" class="playlist"
+      *ngFor="let item of featuredPlaylists.data()">
       <img priority class="playlist-img" height="200" width="200" [ngSrc]="item.images[0].url">
       <h2 class="playlist-title">{{item.name}}</h2>
     </a>
