add angualr query devtools

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,4 +21,5 @@
     </div>
     <app-player></app-player>
   </ng-container>
+  <angular-query-devtools *ngIf="!isProductionMode" initialIsOpen />
 </div>
