--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,14 @@
 <div class="home">
   <h1 class="title">Home 😎</h1>
-
-  <div class="playlist-list" *ngIf="featuredPlaylists.isSuccess()">
+  @if(featuredPlaylists.isSuccess()){
+  <div class="playlist-list">
     <a class="link" [routerLink]="['/playlist', item.id]" class="playlist"
-      *ngFor="let item of featuredPlaylists.data()">
+      *ngFor="let item of featuredPlaylists.data().playlists.items">
       <img priority class="playlist-img" height="200" width="200" [ngSrc]="item.images[0].url">
       <h2 class="playlist-title">{{item.name}}</h2>
     </a>
   </div>
+  }
 </div>
 
 <ng-template #skeletonLoading>
