--- a/src/app/playlist-tracks/playlist-tracks.component.html
+++ b/src/app/playlist-tracks/playlist-tracks.component.html
@@ -1,13 +1,14 @@
 <div class="playlist">
-  <h1 *ngIf="title() else skeletonLoading" class="title">{{title()}}</h1>
-  <app-track-list class="track-list" [isLoading]="trackService.isLoading" (getNextPage)="getNextPage($event)"
-    [total]="total()" [tracksList]="tracks">
+  @if(playlistInfo.isSuccess()){
+  <h1 class="title">{{playlistInfo.data().name}}</h1>
+  }
+  @if(playlistInfo.isPending()){
+  <div class="title">
+    <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="1"
+      [theme]="{ height: '32px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+  </div>
+  }
+  <app-track-list class="track-list" (getNextPage)="getNextPage($event)" [total]="total()"
+    [tracksListQuery]="tracksQuery">
   </app-track-list>
 </div>
-
-<ng-template #skeletonLoading>
-  <div class="title">
-    <!-- <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="1"
-      [theme]="{ height: '32px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader> -->
-  </div>
-</ng-template>
