refactor playlists in nav

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -22,12 +22,13 @@
       </a></li>
   </ul>
 
-
-  <div class="playlist-list" *ngIf="userPlaylists | async as items">
+  @if(userPlaylists.isSuccess()){
+  <div class="playlist-list" *ngIf="userPlaylists.data().items as items">
     <a class="link" (click)="open.set(false)" [routerLink]="['/playlist', item.id]" class="playlist"
       *ngFor="let item of items">
       <img class="playlist-img" [src]="item.images[0].url">
       <h3 class="playlist-name">{{item.name}}</h3>
     </a>
   </div>
+  }
 </nav>
