--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,11 +2,11 @@
 
   <mat-form-field class="search-input-field" appearance="fill">
     <input type="text" matInput [formControl]="searchFromControl" placeholder="Search for specific song...">
-
   </mat-form-field>
-
-  <ul class="track-list" *ngIf="!isLoading(); else skeletonLoading">
-    <li (click)="play(item.uri)" class="track" *ngFor="let item of searchResults()">
+  @if(searchQuery.isSuccess()){
+  <ul class="track-list">
+    @for(item of searchQuery.data().tracks.items; track item.id;){
+    <li (click)="play(item.uri)" class="track">
       <div class="song-info">
         <img class="track-img" width="90" height="90" [ngSrc]="item.album.images[1].url">
         <div class="album-artist">
@@ -19,30 +19,29 @@
           </div>
         </div>
       </div>
-
       <span class="track-artist">{{item.duration_ms | duration}}</span>
     </li>
+    }
   </ul>
-</div>
-
-<ng-template #skeletonLoading>
+  }
+  @if(searchQuery.isPending()){
   <ul class="track-list track-list--skeleton">
     <li class="track" *ngFor="let item of skeletonLoadingArray; let i = index">
       <div class="song-info">
-        <!-- <ngx-skeleton-loader animation="progress-dark" count="1"
+        <ngx-skeleton-loader animation="progress-dark" count="1"
           [theme]="{ height: '90px', width: '90px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
         <div class="album-artist">
           <ngx-skeleton-loader animation="progress-dark" count="1"
             [theme]="{ height: '32px', width: '160px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
           <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="2"
-            [theme]="{ height: '16px', width: '150px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader> -->
-        <!-- </div> -->
+            [theme]="{ height: '16px', width: '150px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+        </div>
       </div>
-
       <span class="time">
-        <!-- <ngx-skeleton-loader animation="progress-dark" count="1"
-          [theme]="{ height: '16px', width: '40px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader> -->
+        <ngx-skeleton-loader animation="progress-dark" count="1"
+          [theme]="{ height: '16px', width: '40px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
       </span>
     </li>
   </ul>
-</ng-template>
+  }
+</div>
