--- a/src/theme.scss
+++ b/src/theme.scss
@@ -36,7 +36,7 @@ $primary-palette: (
 $my-primary: mat.define-palette($primary-palette, 500);
 $my-accent: mat.define-palette($primary-palette, A200, A100, A400);
 
-$my-theme: mat.define-light-theme((color: (primary: $my-primary,
+$my-theme: mat.define-dark-theme((color: (primary: $my-primary,
         accent: $my-accent,
       ),
       density: 0,
