--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -1,11 +1,10 @@
-<div #trackList class="track-list-container">
+<div class="track-list-container">
   <mat-paginator class="paginator" (page)="handlePageEvent($event)" [length]="total()" [pageSize]="pageSize"
     [pageIndex]="currentPage()" aria-label="Select page">
   </mat-paginator>
-
-  @if(tracksListQuery.isSuccess()){
+  @if(tracksListQuery().isSuccess()){
   <ul class="track-list">
-    @for(item of tracksListQuery.data().items; track item.track.id; let i = $index){
+    @for(item of tracksListQuery().data()?.items; track item.track.id; let i = $index){
     <li (click)="play(i)" class="track">
       <div class="song-info">
         <img class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
@@ -25,7 +24,7 @@
     }
   </ul>
   }
-  @if(tracksListQuery.isPending()){
+  @if(tracksListQuery().isPending()){
   <ul class="track-list track-list--skeleton">
     @for(item of skeletonLoadingArray; track item; let i = $index){
     <li class="track">
