--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -26,7 +26,7 @@
     }
   </ul>
   }
-  @if(tracksListQuery().isPending()){
+  @if(tracksListQuery().isLoading()){
   <ul class="track-list track-list--skeleton">
     @for(item of skeletonLoadingArray; track item; let i = $index){
     <li class="track">
