--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -8,7 +8,7 @@
       [theme]="{ height: '32px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
   </div>
   }
-  <app-track-list class="track-list" (getNextPage)="getNextPage($event)" [total]="total()"
+  <app-track-list class="track-list" (getNextPage)="getNextPage($event)" [total]="playlistInfo.data()?.tracks?.total"
     [tracksListQuery]="tracksQuery">
   </app-track-list>
 </div>
