--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -42,7 +42,7 @@
           type="shuffle"></app-icon>
       </button>
       <button class="btn-outline" (click)="toggleSavedTrack()">
-        <app-icon [ngClass]="{'primary': isSavedTrack === true }" class="icon" type="heart"></app-icon>
+        <app-icon [ngClass]="{'primary': isSavedTrack() === true }" class="icon" type="heart"></app-icon>
       </button>
       <mat-slider class="volume-slider" min="0" max="1" step="0.1">
         <input (dragEnd)="setVolume($event)" value="0.5" matSliderThumb>
