--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home">
   <h1 class="title">Home 😎</h1>
-  @if(featuredPlaylists.isSuccess()){
+ @if(featuredPlaylists.isSuccess()){
   <div class="playlist-list">
     <a class="link" [routerLink]="['/playlist', item.id]" class="playlist"
       *ngFor="let item of featuredPlaylists.data().playlists.items">
@@ -8,13 +8,13 @@
       <h2 class="playlist-title">{{item.name}}</h2>
     </a>
   </div>
-  }
+  } 
   @if(featuredPlaylists.isLoading()){
   <div class="playlist-list">
     <div class="link" class="playlist" *ngFor="let item of skeletonLoadingArray">
-      <ngx-skeleton-loader animation="progress-dark" count="1"
+      <ngx-skeleton-loader class="playlist-img" animation="progress-dark" count="1"
         [theme]="{ height: '200px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-      <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="1"
+      <ngx-skeleton-loader class="playlist-title" animation="progress-dark" count="1"
         [theme]="{ height: '24px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
     </div>
   </div>
