--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -29,14 +29,18 @@
   }
 
   .playlist-img {
+    display: block;
     max-width: 125px;
+    max-height: 125px;
     height: 125px;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 10px;
+    overflow: hidden;
 
     @media screen and (min-width: 980px) {
       max-width: 200px;
+      max-height: 200px;
       height: 200px;
     }
   }
@@ -46,6 +50,12 @@
     color: #fff;
     text-decoration: none;
     text-align: center;
+    max-width: 125px;
+    overflow: hidden;
+
+    @media screen and (min-width: 980px) {
+      max-width: 200px;
+    }
   }
 
   .playlist-list {
