--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
  @if(featuredPlaylists.isSuccess()){
   <div class="playlist-list">
     <a class="link" [routerLink]="['/playlist', item.id]" class="playlist"
-      *ngFor="let item of featuredPlaylists.data().playlists.items">
+      *ngFor="let item of featuredPlaylists.data().playlists?.items">
       <img priority class="playlist-img" height="200" width="200" [ngSrc]="item.images[0].url">
       <h2 class="playlist-title">{{item.name}}</h2>
     </a>
