--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,6 @@
     <app-player></app-player>
   }
   @if(!isProductionMode){
-    <angular-query-devtools initialIsOpen />
+    <angular-query-devtools />
   }
 </div>
