--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -2,12 +2,12 @@
   <mat-paginator class="paginator" (page)="handlePageEvent($event)" [length]="total()" [pageSize]="pageSize"
     [pageIndex]="currentPage()" aria-label="Select page">
   </mat-paginator>
-  @if(tracksListQuery().isSuccess()){
+  @if(!isLoading() && tracksList()){
   <ul class="track-list">
-    @for(item of tracksListQuery().data()?.items; track item.track.id; let i = $index){
+    @for(item of tracksList()?.items; track item.track.id; let i = $index){
     <li (click)="play(i)" class="track">
       <div class="song-info">
-        <img class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
+        <img [alt]="item.track.name" class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
         <div class="album-artist">
           <h2 class="name">{{item.track.name}}</h2>
           <span class="album-name">
@@ -26,7 +26,7 @@
     }
   </ul>
   }
-  @if(tracksListQuery().isLoading()){
+  @if(isLoading()){
   <ul class="track-list track-list--skeleton">
     @for(item of skeletonLoadingArray; track item; let i = $index){
     <li class="track">
