update component tests

--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -9,6 +9,6 @@
   </div>
   }
   <app-track-list class="track-list" (getNextPage)="getNextPage($event)" [total]="playlistInfo.data()?.tracks?.total"
-    [tracksListQuery]="tracksQuery">
+    [tracksList]="tracksQuery.data()" [isLoading]="tracksQuery.isLoading()" >
   </app-track-list>
 </div>
