--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -3,9 +3,9 @@
     [pageIndex]="currentPage()" aria-label="Select page">
   </mat-paginator>
   @if(!isLoading() && tracksList()){
-  <ul class="track-list">
+  <div class="track-list">
     @for(item of tracksList()?.items; track item.track.id; let i = $index){
-    <li (click)="play(i)" class="track">
+    <button type="button" (click)="play(i)" class="track">
       <div class="song-info">
         <img [alt]="item.track.name" class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
         <div class="album-artist">
@@ -22,14 +22,14 @@
       </div>
       <span class="time">{{item.track.duration_ms | duration}}
       </span>
-    </li>
+    </button>
     }
-  </ul>
+  </div>
   }
   @if(isLoading()){
-  <ul class="track-list track-list--skeleton">
+  <div class="track-list track-list--skeleton">
     @for(item of skeletonLoadingArray; track item; let i = $index){
-    <li class="track">
+    <button type="button" class="track">
       <div class="song-info">
         <ngx-skeleton-loader animation="progress-dark" count="1"
           [theme]="{ height: '90px', width: '90px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
@@ -44,8 +44,8 @@
         <ngx-skeleton-loader animation="progress-dark" count="1"
           [theme]="{ height: '16px', width: '30px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
       </span>
-    </li>
+    </button>
     }
-  </ul>
+  </div>
   }
 </div>
