--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@
   .main {
     margin-left: 0;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: #35393c;
     padding: 24px 16px 16px;
 
