add top tracks to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,6 +19,9 @@
     <li><a class="link" (click)="closeMenu()" routerLink="/saved" routerLinkActive="active">
         <mat-icon class="icon">favorite</mat-icon> Saved
       </a></li>
+    <li><a class="link" (click)="closeMenu()" routerLink="/top-tracks" routerLinkActive="active">
+        <mat-icon class="icon">format_list_numbered</mat-icon> Top tracks
+      </a></li>
     <li><a class="link" (click)="closeMenu()" routerLink="/search" routerLinkActive="active">
         <mat-icon class="icon">search</mat-icon> Search
       </a></li>
