--- a/src/app/shared/track-list/track-list.component.html
+++ b/src/app/shared/track-list/track-list.component.html
@@ -1,5 +1,5 @@
 <div class="track-list-container">
-  <mat-paginator class="paginator" (page)="handlePageEvent($event)" [length]="totalTracks()" [pageSize]="pageSize"
+  <mat-paginator class="paginator" (page)="handlePageEvent($event)" [length]="total()" [pageSize]="pageSize"
     [pageIndex]="currentPage()" aria-label="Select page">
   </mat-paginator>
   @if(!isLoading() && tracksList()){
